--- a/front/src/components/CardRestaurant.astro
+++ b/front/src/components/CardRestaurant.astro
@@ -13,7 +13,7 @@ const { name, description, phone, openTime, closeTime, rate, id } = Astro.props
 ---
 
 <a
-  href=`/restaurants/${id}/menus`
+  href=`/restaurants/${id}/`
   class = "rounded-log border shadow-md bg-gray-800 border-gray-700
   hover:scale-105 hover:bg-gray-700 hover:border-gray-500 transition flex flex-col"
 >
