--- a/front/src/components/Menus.astro
+++ b/front/src/components/Menus.astro
@@ -1,5 +1,5 @@
 ---
-import CardMenus from "../components/CardMenus.astro"
+import CardAllMenus from "./CardAllMenus.astro"
 import { getAllMenus } from "../services/api"
 
 const menusRestaurants = await getAllMenus()
@@ -8,7 +8,7 @@ const menusRestaurants = await getAllMenus()
 <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
   {
     menusRestaurants.map(menuRestaurant =>
-      <CardMenus
+      <CardAllMenus
         id = { menuRestaurant.id }
         name = { menuRestaurant.name }
         menus = { menuRestaurant.menus }
